# ColorSpace

./: CMakeLists.txt  README.md
src/: Comparison.cpp  Comparison.h  Conversion.cpp  Utils.h
test/: main.cpp
